# horrocubes-mint-policy-script

./: README.md  plutus-horrocubes.cabal
app/: plutus-horrocubes-counter.hs  plutus-horrocubes-tokens-counter.hs  plutus-horrocubes-tokens.hs
scripts/: counter.plutus  minter.plutus  minterAgents.plutus
src/Horrocubes/: Counter.hs  Deserialisation.hs  MintingScript.hs  MintingScriptWithCounter.hs  UtxoMintingScript.hs
