cabal-version: 2.4

name:                   plutus-horrocubes
version:                1.0.0
description:            horrocubes NFT minting.
author:                 Angel Castillo
maintainer:             angel.castillo@horrocubes.io
license:                Apache-2.0
license-file:           LICENSE
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Horrocubes.Counter, Horrocubes.MintingScript, Horrocubes.Deserialisation, Horrocubes.MintingScriptWithCounter

  build-depends:        aeson  
                      , bytestring
                      , cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx-plugin
                      , plutus-tx
                      , serialise
                      , plutus-core
                      , text

  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable plutus-horrocubes-counter
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-horrocubes-counter.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:        aeson
                      , cardano-api
                      , plutus-tx
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-horrocubes
                      , hex
                      , bytestring 
                      , text

executable plutus-horrocubes-tokens
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-horrocubes-tokens.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:        aeson
                      , cardano-api
                      , plutus-tx
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-horrocubes
                      , hex
                      , bytestring 
                      , text
                      , base91
                      , base58-bytestring

executable plutus-horrocubes-tokens-counter
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-horrocubes-tokens-counter.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:        aeson
                      , cardano-api
                      , plutus-tx
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-horrocubes
                      , hex
                      , bytestring 
                      , text
                      , base91
                      , base58-bytestring
